==============
lxml changelog
==============

2.4 (Under development)
=======================

Features added
--------------

* ``lxml.html.tostring()`` gained new serialisation options
  ``with_tail`` and ``doctype``.

Bugs fixed
----------

* Fixed a crash when using ``iterparse()`` for HTML parsing and
  requesting start events.

* Fixed parsing of more selectors in cssselect.  Whitespace before
  pseudo-elements and pseudo-classes is significant as it is a
  descendant combinator.
  "E :pseudo" should parse the same as "E \*:pseudo", not "E:pseudo".
  Patch by Simon Sapin.

* lxml.html.diff no longer raises an exception when hitting
  'img' tags without 'src' attribute.

Other changes
--------------

* Several classes that are for internal use only were removed
  from the ``lxml.etree`` module dict:
  ``_InputDocument, _ResolverRegistry, _ResolverContext, _BaseContext,
  _ExsltRegExp, _IterparseContext, _TempStore, _ExceptionContext,
  __ContentOnlyElement, _AttribIterator, _NamespaceRegistry,
  _ClassNamespaceRegistry, _FunctionNamespaceRegistry,
  _XPathFunctionNamespaceRegistry, _ParserDictionaryContext,
  _FileReaderContext, _ParserContext, _PythonSaxParserTarget,
  _TargetParserContext, _ReadOnlyProxy, _ReadOnlyPIProxy,
  _ReadOnlyEntityProxy, _ReadOnlyElementProxy, _OpaqueNodeWrapper,
  _OpaqueDocumentWrapper, _ModifyContentOnlyProxy,
  _ModifyContentOnlyPIProxy, _ModifyContentOnlyEntityProxy,
  _AppendOnlyElementProxy, _SaxParserContext, _FilelikeWriter,
  _ParserSchemaValidationContext, _XPathContext,
  _XSLTResolverContext, _XSLTContext, _XSLTQuotedStringParam``

* Several internal classes can no longer be inherited from:
  ``_InputDocument, _ResolverRegistry, _ExsltRegExp, _ElementUnicodeResult,
  _IterparseContext, _TempStore, _AttribIterator, _ClassNamespaceRegistry,
  _XPathFunctionNamespaceRegistry, _ParserDictionaryContext,
  _FileReaderContext, _PythonSaxParserTarget, _TargetParserContext,